--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#a86432</color>
+    <color name="colorPrimaryDark">#a86432</color>
+    <color name="colorAccent">#ffc70f</color>
 </resources>
