--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:backgroundTint="#FFEEB0"
+    android:background="#FFFFFF"
+    android:backgroundTint="#FFFFFF"
     tools:context=".MainActivity">
 
     <ProgressBar
@@ -12,8 +13,9 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="360dp"
-        android:layout_marginLeft="190dp"/>
+        android:layout_marginLeft="190dp"
+        android:layout_marginTop="360dp" />
+
     <TextView
         android:id="@+id/login_text"
         android:layout_width="118dp"
@@ -93,14 +95,15 @@
         android:textAllCaps="false"
         android:textColor="@android:color/white"
         android:textSize="23sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:cornerRadius="30dp" />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="308dp"
-        android:layout_marginTop="-50dp"
         android:layout_above="@+id/login_email_input"
+        android:layout_marginTop="-50dp"
         android:layout_marginBottom="-158dp"
         app:srcCompat="@drawable/header" />
 
@@ -114,8 +117,7 @@
         android:layout_marginBottom="50dp"
         android:text="Forgot password?"
         android:textColor="#505050"
-        android:textSize="17sp"
-     />
+        android:textSize="17sp" />
 
     <TextView
         android:id="@+id/onlinereg"
@@ -123,8 +125,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="135dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="20dp"
         android:layout_marginTop="560dp"
+        android:layout_marginRight="20dp"
         android:layout_marginBottom="50dp"
         android:text="Online Registration"
         android:textColor="#505050"
@@ -142,7 +144,6 @@
         android:clickable="true"
         app:backgroundTint="#B10000"
         app:srcCompat="@android:drawable/ic_menu_add" />
-
 
 
 </RelativeLayout>
