--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Peopleswave" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Peopleswave" parent="Theme.AppCompat">
         <!-- Primary brand color. -->
         <item name="colorPrimary">#9C0000</item>
         <item name="colorPrimaryVariant">#9C0000</item>
