--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -9,8 +9,8 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
-        android:layout_width="146dp"
-        android:layout_height="96dp"
+        android:layout_width="36dp"
+        android:layout_height="wrap_content"
         android:src="@drawable/ic_baseline_person_24" />
 
     <TextView
