--- a/app/src/main/res/layout/activity_request_new_loan.xml
+++ b/app/src/main/res/layout/activity_request_new_loan.xml
@@ -287,8 +287,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="50dp"
                 android:layout_marginTop="40dp"
-                android:shadowColor="#090909"
+                android:backgroundTint="#910000"
                 android:onClick="AddLoanRequest"
+                android:shadowColor="#090909"
                 android:text="Submit"
                 app:cornerRadius="15dp" />
 
